--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ defusedxml==0.7.1
 dj-rest-auth==2.2.5
 Django==4.1.3
 django-allauth==0.51.0
+django-cors-headers==3.13.0
 django-crispy-forms==1.14.0
 django-environ==0.9.0
 django-rest-auth==0.9.5
